# data-only-attacks

./: LICENSE  README.md
SQLite/: README.md  cve-2017-6983-poc-simple.py  cve-2017-6983-poc.py  cve-2017-6983.md  doXdgOpen-attack.md  doXdgOpen-poc.py  doXdgOpen.md  isDelete-attack.md  isDelete-poc.py  isDelete.md  mode.md  zTempFile-attack.md  zTempFile-poc.py  zTempFile.md
SQLite-doXdgOpen/: analysis.md  poc.py
SQLite-isDelete/: analysis.md
SQLite-zTempFile/: analysis.md
V8/: README.md  args.gn  cve-2021-30632.md  enable_os_system-attack.md  enable_os_system-poc.js  enable_os_system.md  poc-by-mym-stable.js  v8.patch
curl/: README.md  tempstore.md
jhead/: README.md  editcomment.md  editcomment_commentinsertfilename_commentinsertliteral.md  regenthumbnail.md
nginx/: README.md  ngx_terminate_quit.md  sa_family.md  st_uid_mode.md
