# Set build arguments here. See `gn help buildargs`.
cflags_c = "-O0 -g"
cflags_cc = "-O0 -g"
is_clang = false
clang_base_path = "/usr"
is_asan = false
is_debug = true
is_component_build = false
symbol_level = 2
v8_enable_backtrace = true
v8_optimized_debug = false
v8_enable_disassembler=true 
v8_enable_object_print=true 
v8_enable_verify_heap=true
# target_cpu = "x86"
use_sysroot = false
use_custom_libcxx = false
v8_monolithic = true
# v8_target_cpu = "x86"
v8_static_library = true
v8_enable_i18n_support = false
v8_enable_sandbox = false
v8_use_external_startup_data = false
clang_use_chrome_plugins=false
treat_warnings_as_errors = false
custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
